[package]
name = "expandenv"
version = "0.1.3"
edition = "2024"
license = "0BSD"
description = "A Rust crate focused on expanding environment variables."
repository = "https://github.com/dablenparty/expandenv-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
bstr = "1.12.1"
directories-next = "2.0.0"
regex = "1.11.1"
thiserror = "2.0.12"
